#495 updates to dependencies for 0.9.1 release